--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>zzz</title> 
+    <title>Mules of Wall Street</title> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Fonts -->
@@ -19,7 +19,7 @@
     <link rel="icon" href="img/icons/logo-icon.svg" type="image/x-icon">
 </head>
 <body id="body">
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
                 <div class="logo">
@@ -125,7 +125,7 @@
         </div>
     </header>
 
-    <section class="general">
+    <section class="general" id="general">
         <ul class="general__gallery">
             <li class="general__gallery-item">
                 <img src="img/general/mule1.png" alt="Mule`s image">
@@ -159,7 +159,7 @@
         </div>
     </section>
 
-    <section class="mint">
+    <section class="mint" id="mint">
         <div class="container">
             <div class="mint__inner">
                 <div class="mint__info">
@@ -183,7 +183,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="about__inner">
                 <h2 class="about__title title">What is <br> <span>Mules of Wall Street</span></h2>
@@ -242,7 +242,7 @@
         </div>
     </section>
 
-    <section class="map">
+    <section class="map" id="map">
         <div class="container">
             <div class="map__inner">
                 <h2 class="title">Roadmap</h2>
@@ -306,7 +306,7 @@
         </div>
     </section>
 
-    <section class="team">
+    <section class="team" id="team">
         <div class="container">
             <div class="team__inner">
                 <h2 class="title">Our Team</h2>
@@ -346,7 +346,7 @@
         </div>
     </section>
 
-    <section class="faq">
+    <section class="faq" id="faq">
         <div class="container">
             <div class="faq__container">
                 <h2 class="title">FAQ</h2>
@@ -408,7 +408,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="container">
             <div class="footer__inner">
                 <h2 class="title footer__title"><span>Mules</span> of Wall Street</h2>
@@ -435,8 +435,8 @@
                     </li>
                 </ul>
                 <div class="footer__links">
-                    <a href="https://www.instagram.com/cristiano" target="_blank" class="footer__terms">Terms of Service</a>
-                    <a href="https://www.instagram.com/cristiano" target="_blank" class="footer__adress">0x4ghfdgklhgfl83ljfdgbdfjg4385lcbndlbn93294lmxcbnb84</a>
+                    <a href="userf/terms.pdf" target="_blank" class="footer__terms">Terms of Service</a>
+                    <a href="https://etherscan.io/" target="_blank" class="footer__adress">0x4ghfdgklhgfl83ljfdgbdfjg4385lcbndlbn93294lmxcbnb84</a>
                 </div>
                 <p class="footer__copyright">©  2022  Mules of Wall Street  |  All rights reserved</p>
             </div>
