--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="header__inner">
                 <div class="logo">
-                    <a href="#">
+                    <a href="index.html">
                         <p class="logo-text"><span>Mules</span><br> of Wall Street</p>
                     </a>
                 </div>
@@ -75,28 +75,6 @@
                                 <a href="#" class="nav__link" target="_blank" data-scroll="#faq">FAQ</a>
                             </li>
                         </ul>
-                        <ul class="socials">
-                            <li class="socials-item">
-                                <a href="https://www.instagram.com/cristiano" target="_blank">
-                                    <img src="img/icons/ds.svg" alt="Twitter icon">
-                                </a>
-                            </li>
-                            <li class="socials-item">
-                                <a href="https://www.instagram.com/cristiano" target="_blank">
-                                    <img src="img/icons/twitter.svg" alt="Inst icon">
-                                </a>
-                            </li>
-                            <li class="socials-item">
-                                <a href="https://www.instagram.com/cristiano" target="_blank">
-                                    <img src="img/icons/inst.svg" alt="Discord icon">
-                                </a>
-                            </li>
-                            <li class="socials-item">
-                                <a href="https://www.instagram.com/cristiano" target="_blank">
-                                    <img src="img/icons/medium.svg" alt="Discord icon">
-                                </a>
-                            </li>
-                        </ul> <!-- /.socials -->
                     </nav> <!-- /.mobile-nav -->
                 </div> <!-- /.mobile__nav-wrapper -->
                 <ul class="socials">
@@ -163,7 +141,7 @@
         <div class="container">
             <div class="mint__inner">
                 <div class="mint__info">
-                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img">
+                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" data-aos="fade-right">
                     <div class="mint__content">
                         <h2 class="title">Mint section</h2>
                         <div class="mint__calc">
@@ -177,7 +155,7 @@
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn">Mint</a>
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn-white btn">Connect Wallet</a>
                     </div>
-                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img">
+                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" data-aos="fade-left">
                 </div>
             </div>
         </div>
@@ -189,13 +167,13 @@
                 <h2 class="about__title title">What is <br> <span>Mules of Wall Street</span></h2>
                 <ul class="about__gallery">
                     <li class="about__gallery-item">
-                        <img src="img/about/group1.png" alt="Img" class="about__img-group">
+                        <img src="img/about/group1.png" alt="Img" class="about__img-group" data-aos="fade-right">
                     </li>
                     <li class="about__gallery-item">
-                        <img src="img/about/mule2.png" alt="Mule" class="about__img">
+                        <img src="img/about/mule2.png" alt="Mule" class="about__img" data-aos="zoom-out">
                     </li>
                     <li class="about__gallery-item">
-                        <img src="img/about/group2.png" alt="Img" class="about__img-group">
+                        <img src="img/about/group2.png" alt="Img" class="about__img-group" data-aos="fade-left">
                     </li>
                 </ul>
                 <div class="about__desc">
@@ -247,7 +225,7 @@
             <div class="map__inner">
                 <h2 class="title">Roadmap</h2>
                 <div class="map__content">
-                    <ul class="map__content-group">
+                    <ul class="map__content-group" data-aos="zoom-out-right">
                         <li class="map__card">
                             <div class="map__card-content">
                                 <p class="map__card-number">01</p>
@@ -279,7 +257,7 @@
                     <div class="counter counter-mobile">
                         <p>60%</p>
                     </div>
-                    <ul class="map__content-group">
+                    <ul class="map__content-group" data-aos="zoom-out-left">
                         <li class="map__card">
                             <div class="map__card-content">
                                 <p class="map__card-number">04</p>
@@ -312,32 +290,32 @@
                 <h2 class="title">Our Team</h2>
                 <ul class="team__cards">
                     <li class="team__card">
-                        <img src="img/team/team1.png" alt="Mule" class="team__card-img">
+                        <img src="img/team/team1.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
                         <h3 class="team__card-name">Don Kihot</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team2.png" alt="Mule" class="team__card-img">
+                        <img src="img/team/team2.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
                         <h3 class="team__card-name">The Goat</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team3.png" alt="Mule" class="team__card-img">
+                        <img src="img/team/team3.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
                         <h3 class="team__card-name">Ceaser’s Queen</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team4.png" alt="Mule" class="team__card-img">
+                        <img src="img/team/team4.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
                         <h3 class="team__card-name">The Tie</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team5.png" alt="Mule" class="team__card-img">
+                        <img src="img/team/team5.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
                         <h3 class="team__card-name">Johny Bravo</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team6.png" alt="Mule" class="team__card-img">
+                        <img src="img/team/team6.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
                         <h3 class="team__card-name">Anthony Soprano</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
@@ -350,7 +328,7 @@
         <div class="container">
             <div class="faq__container">
                 <h2 class="title">FAQ</h2>
-                <div class="faq__content">
+                <div class="faq__content" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <div class="faq__accordion">
                         <ul class="faq__accordion-items">
                           <li class="faq__accordion-item">
