--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="mint__inner">
                 <div class="mint__info">
-                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" data-aos="fade-right">
+                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" data-aos="zoom-out">
                     <div class="mint__content">
                         <h2 class="title">Mint section</h2>
                         <div class="mint__calc">
@@ -155,7 +155,7 @@
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn">Mint</a>
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn-white btn">Connect Wallet</a>
                     </div>
-                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" data-aos="fade-left">
+                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" data-aos="zoom-out">
                 </div>
             </div>
         </div>
@@ -167,13 +167,13 @@
                 <h2 class="about__title title">What is <br> <span>Mules of Wall Street</span></h2>
                 <ul class="about__gallery">
                     <li class="about__gallery-item">
-                        <img src="img/about/group1.png" alt="Img" class="about__img-group" data-aos="fade-right">
+                        <img src="img/about/group1.png" alt="Img" class="about__img-group">
                     </li>
                     <li class="about__gallery-item">
                         <img src="img/about/mule2.png" alt="Mule" class="about__img" data-aos="zoom-out">
                     </li>
                     <li class="about__gallery-item">
-                        <img src="img/about/group2.png" alt="Img" class="about__img-group" data-aos="fade-left">
+                        <img src="img/about/group2.png" alt="Img" class="about__img-group">
                     </li>
                 </ul>
                 <div class="about__desc">
@@ -225,7 +225,7 @@
             <div class="map__inner">
                 <h2 class="title">Roadmap</h2>
                 <div class="map__content">
-                    <ul class="map__content-group" data-aos="zoom-out-right">
+                    <ul class="map__content-group" data-aos="zoom-out">
                         <li class="map__card">
                             <div class="map__card-content">
                                 <p class="map__card-number">01</p>
@@ -257,7 +257,7 @@
                     <div class="counter counter-mobile">
                         <p>60%</p>
                     </div>
-                    <ul class="map__content-group" data-aos="zoom-out-left">
+                    <ul class="map__content-group" data-aos="zoom-out">
                         <li class="map__card">
                             <div class="map__card-content">
                                 <p class="map__card-number">04</p>
