--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="mint__inner">
                 <div class="mint__info">
-                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" data-aos="zoom-out">
+                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" data-aos="fade-right">
                     <div class="mint__content">
                         <h2 class="title">Mint section</h2>
                         <div class="mint__calc">
@@ -155,7 +155,7 @@
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn">Mint</a>
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn-white btn">Connect Wallet</a>
                     </div>
-                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" data-aos="zoom-out">
+                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" data-aos="fade-left">
                 </div>
             </div>
         </div>
@@ -255,6 +255,9 @@
                         <p>60%</p>
                     </div>
                     <div class="counter counter-mobile">
+                        <p>60%</p>
+                    </div>
+                    <div class="counter counter-small">
                         <p>60%</p>
                     </div>
                     <ul class="map__content-group" data-aos="zoom-out">
