--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="container">
             <div class="mint__inner">
                 <div class="mint__info">
-                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" data-aos="fade-right">
+                    <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img">
                     <div class="mint__content">
                         <h2 class="title">Mint section</h2>
                         <div class="mint__calc">
@@ -155,7 +155,7 @@
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn">Mint</a>
                         <a href="https://www.instagram.com/cristiano" target="_blank" class="mint__btn btn-white btn">Connect Wallet</a>
                     </div>
-                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" data-aos="fade-left">
+                    <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img">
                 </div>
             </div>
         </div>
@@ -170,7 +170,7 @@
                         <img src="img/about/group1.png" alt="Img" class="about__img-group">
                     </li>
                     <li class="about__gallery-item">
-                        <img src="img/about/mule2.png" alt="Mule" class="about__img" data-aos="zoom-out">
+                        <img src="img/about/mule2.png" alt="Mule" class="about__img">
                     </li>
                     <li class="about__gallery-item">
                         <img src="img/about/group2.png" alt="Img" class="about__img-group">
@@ -225,7 +225,7 @@
             <div class="map__inner">
                 <h2 class="title">Roadmap</h2>
                 <div class="map__content">
-                    <ul class="map__content-group" data-aos="zoom-out">
+                    <ul class="map__content-group">
                         <li class="map__card">
                             <div class="map__card-content">
                                 <p class="map__card-number">01</p>
@@ -260,7 +260,7 @@
                     <div class="counter counter-small">
                         <p>60%</p>
                     </div>
-                    <ul class="map__content-group" data-aos="zoom-out">
+                    <ul class="map__content-group">
                         <li class="map__card">
                             <div class="map__card-content">
                                 <p class="map__card-number">04</p>
@@ -293,32 +293,32 @@
                 <h2 class="title">Our Team</h2>
                 <ul class="team__cards">
                     <li class="team__card">
-                        <img src="img/team/team1.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
+                        <img src="img/team/team1.png" alt="Mule" class="team__card-img">
                         <h3 class="team__card-name">Don Kihot</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team2.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
+                        <img src="img/team/team2.png" alt="Mule" class="team__card-img">
                         <h3 class="team__card-name">The Goat</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team3.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
+                        <img src="img/team/team3.png" alt="Mule" class="team__card-img">
                         <h3 class="team__card-name">Ceaser’s Queen</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team4.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
+                        <img src="img/team/team4.png" alt="Mule" class="team__card-img">
                         <h3 class="team__card-name">The Tie</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team5.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
+                        <img src="img/team/team5.png" alt="Mule" class="team__card-img">
                         <h3 class="team__card-name">Johny Bravo</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
                     <li class="team__card">
-                        <img src="img/team/team6.png" alt="Mule" class="team__card-img" data-aos="zoom-out">
+                        <img src="img/team/team6.png" alt="Mule" class="team__card-img">
                         <h3 class="team__card-name">Anthony Soprano</h3>
                         <p class="team__card-desc">Shines bright like the flash of your iPhone during a night out Aka our marketing director</p>
                     </li>
@@ -331,7 +331,7 @@
         <div class="container">
             <div class="faq__container">
                 <h2 class="title">FAQ</h2>
-                <div class="faq__content" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <div class="faq__content">
                     <div class="faq__accordion">
                         <ul class="faq__accordion-items">
                           <li class="faq__accordion-item">
