--- a/whitelist.html
+++ b/whitelist.html
@@ -27,7 +27,7 @@
                     <span></span>
                     <span></span>
                     <span></span>
-                    NFT WHITELIST
+                    WHITELIST
                 </a>
             </div>
             <img src="https://static.wixstatic.com/media/fc1ef4_bec3ddd91d38488b89d81b0b012ccd97~mv2.png/v1/fill/w_441,h_604,al_c,q_85,usm_0.66_1.00_0.01/ILLU_HEADER_4_edited.webp" alt="Img" class="linker__img-second">
