--- a/mint.html
+++ b/mint.html
@@ -66,7 +66,7 @@
                         <ul class="socials-btns">
                             <li class="socials-item">
                                 <a href="index.html" class="btn btn-socials">
-                                    Mint
+                                    Home
                                 </a>
                             </li>
                             <li class="socials-item">
