--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
                             </div>
                         </div>
                         <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" />
-                    </div> 
-                </div> 
-            </div> 
+                    </div>
+                </div>
+            </div>
         </section>  -->
 
         <section class="mint" id="mint">
@@ -222,7 +222,7 @@
                                 >
                                     -
                                 </div>
-                                <input type="number" id="number" value="1" max="10" disabled/="">
+                                <input type="number" id="number" value="1" max="10" disabled>
                                 <div
                                     class="mint__calc-btn"
                                     id="increase"
@@ -235,16 +235,20 @@
                             <div class="mint__price">
                                 <span><span id="price">0.1</span>eth</span>
                             </div>
-                            <a target="_blank" class="mint__btn btn">Minting soon</a>
-                            <div target="_blank" class="mint__btn btn-white btn" id="connectWalletBtn">
+<!--                            <button class="mint__btn btn">Minting soon</button>-->
+                            <button id="mintBtn" class="mint__btn btn">Mint</button>
+                            <button class="mint__btn btn-white btn" id="connectWalletBtn">
                                 Connect Wallet
-                            </div>
+                            </button>
                         </div>
                         <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" />
-                    </div> 
-                </div> 
-            </div> 
-        </section> 
+                    </div>
+                </div>
+                <div class="mint__counter">
+                    <span id="mintCounter">0</span> / 7,777
+                </div>
+            </div>
+        </section>
 
         <section class="about" id="about">
             <div class="container">
