--- a/mint.html
+++ b/mint.html
@@ -130,7 +130,8 @@
                     <div class="mint__info">
                         <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" />
                         <div class="mint__content">
-                            <h2 class="title">Mint section</h2>
+                            <h2 class="title">Mint</h2>
+                            <p class="mint__counter">Minted 0 / 7,777</p>
                             <div class="mint__calc">
                                 <div
                                     class="mint__calc-btn"
