--- a/mint_ch.html
+++ b/mint_ch.html
@@ -130,7 +130,8 @@
                     <div class="mint__info">
                         <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" />
                         <div class="mint__content">
-                            <h2 class="title">薄荷部分</h2>
+                            <h2 class="title">薄荷</h2>
+                            <p class="mint__counter">铸造 0 / 7,777</p>
                             <div class="mint__calc">
                                 <div
                                     class="mint__calc-btn"
