delete old mint counter, create balance check error if balance 0

--- a/mint_ch.html
+++ b/mint_ch.html
@@ -131,7 +131,8 @@
                         <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" />
                         <div class="mint__content">
                             <h2 class="title">薄荷</h2>
-                            <p class="mint__counter">铸造 0 / 7,777</p>
+                            <p class="mint__counter">铸造 <span  id="mintCounter">0</span> / 7,777</p>
+
                             <div class="mint__calc">
                                 <div
                                     class="mint__calc-btn"
@@ -161,9 +162,6 @@
                         </div>
                         <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" />
                     </div>
-                </div>
-                <div class="mint__counter">
-                    <span id="mintCounter">0</span> / 7,777
                 </div>
             </div> 
         </section>
