--- a/mint.html
+++ b/mint.html
@@ -131,7 +131,7 @@
                         <img src="img/mint/mule1.png" alt="Mule" class="mint__info-img" />
                         <div class="mint__content">
                             <h2 class="title">Mint</h2>
-                            <p class="mint__counter">Minted 0 / 7,777</p>
+                            <p class="mint__counter">Minted <span  id="mintCounter">0</span> / 7,777</p>
                             <div class="mint__calc">
                                 <div
                                     class="mint__calc-btn"
@@ -161,9 +161,6 @@
                         </div>
                         <img src="img/mint/mule2.png" alt="Mule" class="mint__info-img" />
                     </div> 
-                </div>
-                <div class="mint__counter">
-                    <span id="mintCounter">0</span> / 7,777
                 </div>
             </div> 
         </section> 
